--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -3,22 +3,49 @@
     top: 0;
     width: 100%;
 }
-
 .nav {
     position: fixed;
     bottom: 0;
     width: 100%;
     padding: 10px 40px;
-    box-sizing: border-box;
+    box-sizing: border-box; /*I want to keep the entire box size the same*/
     background-color: #f9f9fa;
     border-top: 1px solid rgba(121,121,121,0.2);
 }
-
 .nav__list {
     display: flex;
     justify-content: space-between;
 }
-
-.nav_link {
+.nav__link {
+    position: relative;
     color: #2e363e;
 }
+
+.nav__chats-notification {
+    background-color: tomato;
+    width: 20px;
+    height: 20px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-weight: 600;
+    position: absolute;
+    left: 15px;
+    bottom: 15px;
+}
+
+.nav__find-notification {
+    background-color: tomato;
+    width: 5px;
+    height: 5px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 35px;
+    bottom: 25px;
+}
+
