--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,5 +1,6 @@
 .user-component {
     justify-content: space-between;
+    margin-bottom: 10px;
 }
 
 .user-component,
@@ -23,7 +24,6 @@
     font-size: 17px;
     color: rgba(0,0,0,0.5);
 }
-
 .user-component__avatar--xl {
     width: 80px;
     height: 80px;
@@ -33,11 +33,9 @@
     height: 60px;
     border-radius: 25px;
 }
-
 .user-compoent__title-not-bold {
     font-weight: 400;
 }
-
 .user-component__column:last-child {
     color: rgba(0,0,0,0.4);
     display: flex;
@@ -48,4 +46,8 @@
 .user-component__time {
     margin-bottom: 5px;
     display: block;
+}
+
+.user-component__subtitle i {
+    color: red;
 }
